--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.simple</groupId>
-    <artifactId>springboot_examples</artifactId>
+    <artifactId>springboot-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
