canal基础、canal同步数据库到redis

--- a/springboot-job/springboot-job-xxl-admin/xxl-job-admin/src/main/resources/application.properties
+++ b/springboot-job/springboot-job-xxl-admin/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8088
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -50,7 +50,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
 ### xxl-job, access token
-xxl.job.accessToken=yudaoyuanma
+xxl.job.accessToken=
 
 ### xxl-job, i18n (default is zh_CN, and you can choose "zh_CN", "zh_TC" and "en")
 xxl.job.i18n=zh_CN
