--- a/springboot-canal/pom.xml
+++ b/springboot-canal/pom.xml
@@ -14,17 +14,23 @@
 
 <!--    canal 1.1.1版本-->
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.otter</groupId>-->
+<!--            <artifactId>canal.client</artifactId>-->
+<!--            <version>1.1.0</version>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.alibaba.otter/canal.protocol &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.otter</groupId>-->
+<!--            <artifactId>canal.protocol</artifactId>-->
+<!--            <version>1.1.0</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.alibaba.otter</groupId>
             <artifactId>canal.client</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.alibaba.otter/canal.protocol -->
-        <dependency>
-            <groupId>com.alibaba.otter</groupId>
-            <artifactId>canal.protocol</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.4</version>
         </dependency>
 
     </dependencies>
