--- a/springboot-activemq/pom.xml
+++ b/springboot-activemq/pom.xml
@@ -8,8 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <artifactId>springboot-activemq</artifactId>
+    <modules>
+        <module>springboot-activemq-delay</module>
+        <module>springboot-activemq-demo</module>
+        <module>springboot-activemq-message-model</module>
+        <module>springboot-activemq-orderly</module>
+        <module>springboot-activemq-retry</module>
+    </modules>
 
     <dependencies>
         <dependency>
