--- a/springboot-activemq/springboot-activemq-delay/pom.xml
+++ b/springboot-activemq/springboot-activemq-delay/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-active-delay</artifactId>
+    <artifactId>springboot-activemq-delay</artifactId>
     <description>activemq demo</description>
 
 
