--- a/springboot-activemq/springboot-activemq-retry/pom.xml
+++ b/springboot-activemq/springboot-activemq-retry/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-active-retry</artifactId>
+    <artifactId>springboot-activemq-retry</artifactId>
     <description>activemq 消息重试</description>
 
 
