--- a/springboot-actuator-admin/pom.xml
+++ b/springboot-actuator-admin/pom.xml
@@ -8,8 +8,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>springboot-actuator-admin</artifactId>
+
+    <modules>
+        <module>springboot-actuator-admin-01-adminserver</module>
+        <module>springboot-actuator-admin-01-demo-application</module>
+        <module>springboot-actuator-admin-02-adminserver</module>
+        <module>springboot-actuator-admin-02-demo-application</module>
+        <module>springboot-actuator-admin-02-eurekaserver</module>
+        <module>springboot-actuator-admin-03-security-adminserver</module>
+        <module>springboot-actuator-admin-03-security-demo-application</module>
+        <module>springboot-actuator-admin-04-mail-adminserver</module>
+        <module>springboot-actuator-admin-05-custom-adminserver</module>
+    </modules>
 
 
 </project>
