--- a/springboot-actuator/pom.xml
+++ b/springboot-actuator/pom.xml
@@ -8,8 +8,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>springboot-actuator</artifactId>
+
+    <modules>
+        <module>springboot-actuator-auditevents</module>
+        <module>springboot-actuator-custom-endpoint</module>
+        <module>springboot-actuator-demo</module>
+        <module>springboot-actuator-health</module>
+        <module>springboot-actuator-httptrace</module>
+        <module>springboot-actuator-info</module>
+        <module>springboot-actuator-metrics</module>
+        <module>springboot-actuator-security</module>
+    </modules>
 
 
 </project>
