--- a/springboot-canal/pom.xml
+++ b/springboot-canal/pom.xml
@@ -8,9 +8,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>springboot-canal</artifactId>
     <description>数据库同步工具</description>
+    <modules>
+        <module>springboot-canal-redis-sync</module>
+        <module>springboot-canal-simple</module>
+    </modules>
 
 <!--    canal 1.1.1版本-->
     <dependencies>
