--- a/springboot-canal/springboot-canal-redis-sync/pom.xml
+++ b/springboot-canal/springboot-canal-redis-sync/pom.xml
@@ -8,8 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <artifactId>springboot-canal-redis-sync</artifactId>
+
+    <modules>
+        <module>springboot-canal-redis-sync-kafka</module>
+        <module>springboot-canal-redis-sync-rocketmq</module>
+    </modules>
 
 
 </project>
