--- a/springboot-config-file/pom.xml
+++ b/springboot-config-file/pom.xml
@@ -8,8 +8,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>springboot-config-file</artifactId>
+
+    <modules>
+        <module>springboot-apollo</module>
+        <module>springboot-custom-config-name</module>
+        <module>springboot-jasypt</module>
+        <module>springboot-nacos</module>
+        <module>springboot-profiles</module>
+    </modules>
 
 
 </project>
