--- a/springboot-config-file/springboot-nacos/pom.xml
+++ b/springboot-config-file/springboot-nacos/pom.xml
@@ -8,9 +8,18 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>springboot-nacos</artifactId>
     <description>Nacos分布式配置</description>
+
+    <modules>
+        <module>springboot-nacos-auto-refresh</module>
+        <module>springboot-nacos-demo</module>
+        <module>springboot-nacos-jasypt</module>
+        <module>springboot-nacos-multi</module>
+        <module>springboot-nacos-profiles</module>
+    </modules>
 
 
 </project>
