--- a/springboot-datasource-sharding/pom.xml
+++ b/springboot-datasource-sharding/pom.xml
@@ -8,8 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <artifactId>springboot-datasource-sharding</artifactId>
 
+    <modules>
+        <module>springboot-datasource-sharding-01</module>
+        <module>springboot-datasource-sharding-jdbc</module>
+        <module>springboot-datasource-sharding-mybatis-plus</module>
+    </modules>
 
 </project>
