--- a/springboot-job/pom.xml
+++ b/springboot-job/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-job</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-job-quartz</module>
+        <module>springboot-job-quartz-memory</module>
+        <module>springboot-job-springtask</module>
+        <module>springboot-job-xxl</module>
+        <module>springboot-job-xxl-admin</module>
+    </modules>
 
 
 </project>
