--- a/springboot-rabbitmq/pom.xml
+++ b/springboot-rabbitmq/pom.xml
@@ -10,6 +10,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-rabbitmq</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>springboot-rabbitmq-ack</module>
+        <module>springboot-rabbitmq-batch</module>
+        <module>springboot-rabbitmq-batch-consumer</module>
+        <module>springboot-rabbitmq-batch-consumer-02</module>
+        <module>springboot-rabbitmq-confirm</module>
+        <module>springboot-rabbitmq-confirm-async</module>
+        <module>springboot-rabbitmq-converter</module>
+        <module>springboot-rabbitmq-delay</module>
+        <module>springboot-rabbitmq-demo</module>
+        <module>springboot-rabbitmq-error-handler</module>
+        <module>springboot-rabbitmq-message-model</module>
+        <module>springboot-rabbitmq-orderly</module>
+        <module>springboot-rabbitmq-retry</module>
+        <module>springboot-rabbitmq-transaction</module>
+    </modules>
 
     <dependencies>
         <dependency>
