--- a/springboot-register-center/pom.xml
+++ b/springboot-register-center/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-register-center</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-register-center-nacos</module>
+    </modules>
 
 
 </project>
