--- a/springboot-rocketmq/pom.xml
+++ b/springboot-rocketmq/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-rocketmq</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-rocketmq-simple</module>
+    </modules>
 
     <dependencies>
 
