--- a/springboot-sentinel/pom.xml
+++ b/springboot-sentinel/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-sentinel</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-sentinel-apollo</module>
+        <module>springboot-sentinel-demo</module>
+        <module>springboot-sentinel-nacos</module>
+    </modules>
 
 
 
