--- a/springboot-shiro/pom.xml
+++ b/springboot-shiro/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-shiro</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-shiro-demo</module>
+        <module>springboot-shiro-project</module>
+    </modules>
 
 
 </project>
