--- a/springboot-springsecurity-sso/pom.xml
+++ b/springboot-springsecurity-sso/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>springboot-springsecurity-sso</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>springboot-springsecurity-sso-authorization-server</module>
+        <module>springboot-springsecurity-sso-resource-server</module>
+    </modules>
 
 
 </project>
