--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>springboot-kafka/springboot-kafka-flink-es</module>
         <module>springboot-transaction</module>
         <module>springboot-disruptor</module>
+        <module>springboot-timewheel</module>
     </modules>
 
 
