--- a/springboot-netty/springboot-netty-examples/springboot-netty-server/pom.xml
+++ b/springboot-netty/springboot-netty-examples/springboot-netty-server/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springboot-examples</artifactId>
+        <artifactId>springboot-netty-examples</artifactId>
         <groupId>com.simple</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -17,13 +17,6 @@
             <groupId>com.simple</groupId>
             <artifactId>springboot-netty-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <!-- Netty 依赖 -->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.50.Final</version>
         </dependency>
     </dependencies>
 
