--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <module>springboot-transaction</module>
         <module>springboot-disruptor</module>
         <module>springboot-timewheel</module>
+        <module>springboot-netty-idle-prod-client</module>
     </modules>
 
 
