feat: netty可用于生产的代码案例

--- a/springboot-netty/pom.xml
+++ b/springboot-netty/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>springboot-netty-examples</module>
         <module>springboot-netty-idle-prod</module>
+        <module>springboot-netty-prod</module>
     </modules>
 
     <dependencies>
