feat: netty可用于生产的代码案例

--- a/springboot-netty/springboot-netty-prod/springboot-netty-prod-client/pom.xml
+++ b/springboot-netty/springboot-netty-prod/springboot-netty-prod-client/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.simple</groupId>
             <artifactId>springboot-netty-prod-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
